--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
     "html-webpack-plugin": "^4.2.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
